--- a/gittest6.html
+++ b/gittest6.html
@@ -14,6 +14,7 @@
                     <span>
                         <ul>
                             <h1>This is heading for git test 6</h1>
+                            <h2>This is heading for git test 6 @ h2 </h2>
                         </ul>
                     </span>
                 </main>
