--- a/gittest6.html
+++ b/gittest6.html
@@ -15,6 +15,7 @@
                         <ul>
                             <h1>This is heading for git test 6</h1>
                             <h2>This is heading for git test 6 @ h2 </h2>
+                            <h3>This is heading for git test 7 @ h3</h3>
                         </ul>
                     </span>
                 </main>
